# randomshittyapp

./: .gitignore  README.md  db_creation.py  init_db.py  main.py  package.json  podman-compose.yml  pyproject.toml
frontend/: package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx  theme.js
frontend/src/components/ui/: number-input.jsx
frontend/src/features/cards/: index.js
frontend/src/features/cards/components/: CardFormPreview.jsx
frontend/src/features/decks/: index.js
frontend/src/features/home/: index.js
frontend/src/features/presets/: index.js
frontend/src/shared/components/: DeleteConfirmDialog.jsx  Header.jsx  index.js
frontend/src/shared/constants/: api.js
server/api/routes/: archetype_routes.py  bonus_routes.py  card_routes.py  deck_routes.py  effect_routes.py  effect_type_routes.py  faction_routes.py  illustration_routes.py  type_routes.py
server/db/: base.py  db_config.py
server/db/schema/: __init__.py  archetype.py  bonus.py  card.py  card_bonus.py  card_effect.py  deck.py  deck_card.py  effect.py  effect_type.py  faction.py  illustration.py  type.py
server/repositories/: archetype_repository.py  bonus_repository.py  card_repository.py  deck_repository.py  effect_repository.py  effect_type_repository.py  faction_repository.py  illustration_repository.py  type_repository.py
server/services/: archetype_service.py  bonus_service.py  card_service.py  deck_service.py  effect_service.py  effect_type_service.py  faction_service.py  illustration_service.py  type_service.py
uploads/: .gitkeep
(+24 files in other folders)
