[project]
name = "ascendancev2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "psycopg[binary]>=3.2.12",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
]
